  Project Pickaxe {
  database_type: 'PostgreSQL'
  Note: '''
    # The project that indexes
    # "Starknet DEX-AMM pools"
    # Project to be used in 
    # Fibrous Finance
    # Brother of 'Shovel NFT Indexer'
  '''
}

Table tokens as T {
  address varchar [pk, not null]
  name varchar [not null]
  symbol varchar [not null]
  decimals int [not null]
  base bool [not null, default:false]
  native bool [not null, default:false]
  ticker varchar [not null, default:""]
  price varchar [not null, default:0]
  created_at timestamptz [not null, default: `now()`]
}

Table pools as P {
  pool_id bigserial [pk]
  address varchar [not null]
  amm_id bigint [not null, ref: > A.amm_id]
  token_a varchar [not null, ref: > T.address]
  token_b varchar [not null, ref: > T.address]
  reserve_a numeric [not null, default:0]
  reserve_b numeric [not null, default:0]
  fee varchar [not null, default:""]
  total_value numeric [not null, default:0]
  extra_data varchar
  general_extra_data varchar
  last_updated timestamptz [not null, default: '0001-01-01']
  last_block bigint [not null, default:0]
}

Table amms as A {
  amm_id bigserial [pk]
  dex_name varchar [not null]
  router_address varchar [not null]
  key varchar [not null, default:""]
  algorithm_type varchar [not null, default:""]
  created_at timestamptz [not null, default: `now()`, note:'initialized']
}

Table indexer as I {
  id int [pk, not null]
  hashed_password varchar [not null]
  last_queried_block bigint [default:0]
  last_queried_hash varchar [default:""]
  last_updated timestamptz [default: '0001-01-01']
}